--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,16 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pytest = "^7.1.3"
 
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.1.3"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
