--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ gendiff = "gendiff.scripts.gendiff:main"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
 pytest-cov = "^4.0.0"
+flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
